--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.1.0
-hcl==0.3.15
-networkx==2.5
+hcl2==3.0.0
+networkx==2.6.2
 fuzzywuzzy==0.18.0
 radon==4.1.0
-tabulate==0.8.7
-requests==2.25.1
+tabulate==0.8.9
+requests==2.26.0
